<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ECEDE8"
    tools:context="com.siddheswar.newearthnews.Login">

    <EditText
        android:id="@+id/EtUserName"
        android:layout_width="233dp"
        android:layout_height="52dp"

        android:drawableStart="@drawable/ic_username_black"
        android:hint="@string/username"
        android:inputType="textEmailAddress"
        android:padding="5dp"
        android:textAlignment="center"
        android:textColor="#E80505"
        android:textColorHint="#E80505"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.402"
        android:autofillHints=""
        android:gravity="center_horizontal"
        android:drawableLeft="@drawable/ic_username_black" />

    <EditText
        android:id="@+id/EtPassword"
        android:layout_width="233dp"
        android:layout_height="52dp"

        android:drawableLeft="@drawable/ic_password"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="5dp"
        android:textAlignment="center"
        android:textColor="#E80505"
        android:textColorHint="#E80505"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.513"
        android:autofillHints=""
        android:gravity="center_horizontal"
        android:drawableStart="@drawable/ic_password" />

    <com.github.ybq.android.spinkit.SpinKitView
        android:id="@+id/spin_kit"
        style="@style/SpinKitView.Large.Circle"
        android:layout_width="81dp"
        android:layout_height="78dp"
        android:layout_gravity="center"
        android:visibility="invisible"
        app:SpinKit_Color="#FF006F"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="143dp"
        android:layout_height="44dp"
        android:background="@drawable/button"
        android:text="@string/login"
        android:textColor="#ECF6F5"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.633" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="103dp"
        android:layout_height="72dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.182"
        app:srcCompat="@drawable/newslogo" />


    <TextView
        android:id="@+id/gateway"
        android:layout_width="199dp"
        android:layout_height="48dp"
        android:gravity="center_horizontal"
        android:text="@string/signup_now"
        android:textAlignment="center"
        android:textColor="#E80505"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.754" />

    <RelativeLayout
        android:layout_width="423dp"
        android:layout_height="153dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="match_parent"
            android:layout_height="135dp"

            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"

            android:layout_alignParentTop="true"


            android:layout_marginStart="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="-29dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:srcCompat="@drawable/ic_wave_des"
            tools:ignore="MissingConstraints,VectorDrawableCompat" />

    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>